--- a/intro to mysql/views/fav.ejs
+++ b/intro to mysql/views/fav.ejs
@@ -18,7 +18,7 @@
         <% if (newList && newList.length>0) { %>
           <% newList.forEach(house=> { %>
             <div class="shadow shadow-black p-2 w-60 text-gray-600 rounded-lg  hover:cursor-pointer">
-              <img src="/bg.png" class="w-full rounded-lg" alt="<%= house.title %>">
+              <img src="<%= house.photoUrl %>" class="w-full rounded-lg" alt="<%= house.title %>">
               <p>
                 <%= house.title %>
               </p>
