Refactor controllers and model to improve data handling, update MongoDB queries, and fix view links for house IDs

--- a/intro to mongodb/views/home.ejs
+++ b/intro to mongodb/views/home.ejs
@@ -41,7 +41,7 @@
                   </button>
                 </form>
                 <button class="ring-2 rounded-lg p-1 px-2 text-blue-600 hover:cursor-pointer">
-                  <a href="/home/<%= house.id %>">
+                  <a href="/home/<%= house._id %>">
                     View
                   </a>
                 </button>
