--- a/intro to mongodb/views/addHome.ejs
+++ b/intro to mongodb/views/addHome.ejs
@@ -22,7 +22,7 @@
           class="w-4/5 p-2 rounded-full border-2 border-blue-600 outline-0 shadow" name="price">
         <input type="number" placeholder="Enter rating of your house"
           class="w-4/5 p-2 rounded-full border-2 border-blue-600 outline-0 shadow" name="rating">
-        <input type="text" placeholder="Enter your house image url"
+        <input type="text" placeholder="Enter your house image url ( Hint: /houses/1.jpg )"
           class="w-4/5 p-2 rounded-full border-2 border-blue-600 outline-0 shadow" name="photoUrl">
         <input type="submit" value="submit"
           class="p-2 px-5 rounded-full text-white uppercase bg-gradient-to-r from-blue-500 to-blue-600 shadow shadow-gray-400 hover:cursor-pointer hover:opacity-80">
