--- a/intro to mongodb/views/host/home.ejs
+++ b/intro to mongodb/views/host/home.ejs
@@ -34,7 +34,7 @@
 
               <div class="flex justify-between items-center text-white mt-2">
                 <form action="/host/editHome?editing=true" method="post">
-                  <input type="hidden" value="<%= house._id%>" name="favId">
+                  <input type="hidden" value="<%= house._id%>" name="id">
                   <button type="submit"
                     class="bg-blue-700 rounded-lg p-2 hover:cursor-pointer hover:opacity-80 transition-all duration-300">
                     Edit Home
