--- a/intro to mongodb/views/home.ejs
+++ b/intro to mongodb/views/home.ejs
@@ -34,7 +34,7 @@
 
               <div class="flex justify-between items-center text-white mt-2">
                 <form action="/fav" method="post">
-                  <input type="hidden" value="<%= house.id%>" name="favId">
+                  <input type="hidden" value="<%= house._id%>" name="favId">
                   <button type="submit"
                     class="bg-gradient-to-r from-blue-500 to-blue-600 rounded-lg p-2 hover:cursor-pointer hover:opacity-80 transition-all duration-300">
                     Favourite
