--- a/cookies and session/views/partials/nav.ejs
+++ b/cookies and session/views/partials/nav.ejs
@@ -16,5 +16,9 @@
       class="<%= tab === 'editHome' ? 'bg-white/40' : '' %> hover:bg-white/40 hover:cursor-pointer px-3 h-9 flex items-center rounded-lg">
       <a href="/editHome">Edit Home</a>
     </li>
+    <li
+      class="<%= tab === 'login' ? 'bg-white/40' : '' %> hover:bg-white/40 hover:cursor-pointer px-3 h-9 flex items-center rounded-lg">
+      <a href="/login">Login</a>
+    </li>
   </ul>
 </nav>
