--- a/Authentication and Authorization/views/partials/nav.ejs
+++ b/Authentication and Authorization/views/partials/nav.ejs
@@ -27,6 +27,10 @@
             class="<%= tab === 'login' ? 'bg-white/40' : '' %> hover:bg-white/40 hover:cursor-pointer px-3 h-9 flex items-center rounded-lg">
             <a href="/login">Login</a>
           </li>
+          <li
+            class="<%= tab === 'signup' ? 'bg-white/40' : '' %> hover:bg-white/40 hover:cursor-pointer px-3 h-9 flex items-center rounded-lg">
+            <a href="/signup">SignUp</a>
+          </li>
           <% } %>
   </ul>
 </nav>
