--- a/Authentication and Authorization/views/auth/login.ejs
+++ b/Authentication and Authorization/views/auth/login.ejs
@@ -16,8 +16,8 @@
 
       <form method="post" action="/login"
         class="md:w-xl w-full  h-max p-3 flex flex-col gap-5 mt-3 items-center rounded-lg">
-        <input type="text" placeholder="Enter your username" required
-          class="w-4/5 p-2 rounded-full border-2 border-blue-600 outline-0 shadow" name="username">
+        <input type="text" placeholder="Enter your email" required
+          class="w-4/5 p-2 rounded-full border-2 border-blue-600 outline-0 shadow" name="email">
         <input type="password" placeholder="Enter your password" required
           class="w-4/5 p-2 rounded-full border-2 border-blue-600 outline-0 shadow" name="password">
         <input type="submit" value="submit"
