--- a/Handling Multipart form data using multer/views/selectedHome.ejs
+++ b/Handling Multipart form data using multer/views/selectedHome.ejs
@@ -19,7 +19,7 @@
       <div
         class="bg-white shadow-xl rounded-2xl px-8 py-8 w-full max-w-md flex flex-col items-center gap-6 border border-blue-100">
         <div class="w-full">
-          <img src="<%= house.photoUrl %>" alt="house image" class="w-full h-60 object-cover rounded-lg shadow">
+          <img src="<%= house.photo %>" alt="house image" class="w-full h-60 object-cover rounded-lg shadow">
         </div>
         <div class="font-semibold w-full">
           <p class="text-2xl text-blue-800 mb-2">
