--- a/Handling Multipart form data using multer/views/host/editHome.ejs
+++ b/Handling Multipart form data using multer/views/host/editHome.ejs
@@ -14,7 +14,7 @@
       <h1 class="text-3xl text-blue-700 font-extrabold tracking-tight mb-8 w-full text-center uppercase">
         Edit your house here
       </h1>
-      <form method="post" action="/host/editHomeSuccess"
+      <form method="post" action="/host/editHomeSuccess" enctype="multipart/form-data"
         class="bg-white border border-blue-100 shadow-xl rounded-2xl px-8 py-10 w-full max-w-md flex flex-col items-center gap-5">
         <input type="hidden" name="id" value="<%= house._id %>">
         <input type="text" placeholder="Enter your house title here"
@@ -26,9 +26,10 @@
         <input type="number" placeholder="Enter rating of your house"
           class="w-full p-3 rounded-lg border border-blue-300 focus:border-blue-500 outline-none shadow-sm transition"
           name="rating" value="<%= house.rating %>" min="1" max="5" step="0.1" required>
-        <input type="text" placeholder="Enter your house image url"
-          class="w-full p-3 rounded-lg border border-blue-300 focus:border-blue-500 outline-none shadow-sm transition"
-          name="photoUrl" value="<%= house.photoUrl %>" required>
+        <div
+          class="w-full p-3 rounded-lg border border-blue-300 focus:border-blue-500 outline-none shadow-sm transition">
+          <input type="file" class="" name="photo" value="<%= house.photo %>" accept="image/*">
+        </div>
         <input type="submit" value="Update"
           class="w-full p-3 rounded-lg text-white font-semibold uppercase bg-gradient-to-r from-blue-500 to-blue-700 shadow hover:opacity-90 transition cursor-pointer">
       </form>
